--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	  yarn run test,
+	  yarn run test -o --watch,
+	  yarn test -o --watch
+	  
   },
   "keywords": [],
   "author": "",
