--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "backend",
+  "name": "zeiterfassung_app",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "./backend/server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	  yarn run test,
-	  yarn run test -o --watch,
-	  yarn test -o --watch
-	  
+    "dev:server": "npm run dev --prefix backend",
+    "dev:vite": "npm run dev --prefix frontend",
+    "dev": "concurrently \"npm:dev:*\"",
+    "start": "npm run build --prefix frontend && npm start --prefix backend",
+    "postinstall": "npm i --prefix backend && npm i --prefix frontend"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-formidable": "^1.2.0",
-    "formidable": "^3.5.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "nodemon": "^3.0.2"
+    "concurrently": "^8.2.0",
+    "jest": "^29.7.0"
   }
 }
