--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "backend",
+   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch .",
+    "start": "node .",
+    "debugging": "node --inspect-brk .",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +25,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2"
+  },
+   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "esm": "^3.2.25",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
