--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
-   "name": "server",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,24 +12,24 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "body-parser": "^1.20.2",
+  "dependencies": {
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
     "express-formidable": "^1.2.0",
-    "formidable": "^3.5.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "nodemon": "^3.0.2"
+    "formidable": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.1",
+    "nodemon": "^2.0.15"
   },
-   "devDependencies": {
+  "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "esm": "^3.2.25",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
-  }
+  },
+  "description": ""
 }
