--- a/server/package.json
+++ b/server/package.json
@@ -12,24 +12,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.2",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "express-formidable": "^1.2.0",
-    "formidable": "^2.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.3.1",
-    "nodemon": "^2.0.15"
-  },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "esm": "^3.2.25",
+    "express": "^4.19.1",
+    "express-formidable": "^1.2.0",
+    "formidable": "^3.5.1",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   },
   "description": ""
 }
