--- a/server/package.json
+++ b/server/package.json
@@ -29,5 +29,9 @@
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^10.5.0"
+  }
 }
