--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  
+  "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -22,11 +22,5 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0"
-   
-  },
-  "description": "",
-  "dependencies": {
-    "install": "^0.13.0",
-    "npm": "^10.5.0"
-  }
+}
 }
