--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "server",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": 
-    "body-parser": "^1.20.2",
+  "description": "",
+  "devDependencies": {
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
- 
-    "express": "^4.19.1",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
     "express-formidable": "^1.2.0",
-    "formidable": "^3.5.1",
-   
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
-    "nodemon": "^3.1.0"
-}
+    "formidable": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.1",
+    "nodemon": "^2.0.15"
+  }
 }
