--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,24 @@
 {
-  "name": "server",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "node --watch .",
-    "start": "node .",
-    "debugging": "node --inspect-brk .",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
-    "esm": "^3.2.25",
-    "express": "^4.19.1",
-    "express-formidable": "^1.2.0",
-    "formidable": "^3.5.1",
-    "jest": "^29.7.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
-    "nodemon": "^3.1.0",
-    "supertest": "^6.3.4"
-  },
   "description": "",
-  "dependencies": {
-    "install": "^0.13.0",
-    "npm": "^10.5.0"
+  "devDependencies": {
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-formidable": "^1.2.0",
+    "formidable": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.1",
+    "nodemon": "^2.0.15"
   }
 }
